parser/sample_tests/ours/matrix.txt

*** Error line 4.
class Matrix {
^^^^^
*** syntax error

